Все вроде поправил, где мог. Отправляю на ревью

--- a/source/sass/blocks/details.scss
+++ b/source/sass/blocks/details.scss
@@ -1,6 +1,8 @@
 .details {
   padding-left: 110px;
   padding-bottom: 75px;
+  background-color: #ffffff;
+  color: #000000;
   background-image: url("../../img/map-desktop@1x.png"),
     url("../../img/details-bg-desktop@1x.jpg");
   background-repeat: no-repeat,
