--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -2,6 +2,8 @@
   padding-left: 110px;
   padding-top: 30px;
   padding-bottom: 118px;
+  background-color: #ffffff;
+  color: #000000;
   background-image: url("../../img/faq-img-desktop@1x.png"),
     url("../../img/bag-desktop@1x.png"),
     url("../../img/faq-bg-desktop@1x.jpg");
