--- a/source/sass/blocks/masa-photo.scss
+++ b/source/sass/blocks/masa-photo.scss
@@ -1,6 +1,8 @@
 .masa-photo {
   padding-bottom: 303px;
   padding-top: 224px;
+  background-color: #ffffff;
+  color: #000000;
   background-image: url("../../img/cynthia-magana-138943-desktop@1x.png");
   background-repeat: no-repeat;
   background-position: 3px 103px;
@@ -65,7 +67,7 @@
   top: 18px;
   left: 39px;
   fill: #ffffff;
-  //TODO: Не работает заливка белым.
+  //TODO: Не работает заливка белым, вообще не меняется цвет заливки на любых иконках. Вроде правильно ведь все.
 }
 
 @media (max-width: $tab-width) {
