--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,6 +4,8 @@
   padding-left: 110px;
   display: flex;
   border-top: 1px solid #e3e3e3;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 .page-footer__logo {
