--- a/source/sass/blocks/review.scss
+++ b/source/sass/blocks/review.scss
@@ -4,6 +4,8 @@
   padding-right: 141px;
   padding-bottom: 32px;
   text-align: center;
+  background-color: #ffffff;
+  color: #000000;
   background-image: url("../../img/reviews-sketch-desktop@1x.png"),
     url("../../img/reviews-bg-watercolor@1x.png");
   background-repeat: no-repeat,
