--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -2,6 +2,8 @@
   padding-top: 17px;
   padding-bottom: 281px;
   text-align: center;
+  background-color: #ffffff;
+  color: #000000;
   background-image: url("../../img/photo-about-desktop@1x.png"),
     url("../../img/watercolor-Bg-desktop@1x.jpg");
   background-repeat: no-repeat,
