--- a/source/sass/blocks/modal-order-callback.scss
+++ b/source/sass/blocks/modal-order-callback.scss
@@ -196,6 +196,10 @@
     }
   }
 
+  .modal-order-callback__error-message {
+    left: 150px;
+  }
+
   .modal-order-callback__form input[type="submit"] {
     width: 60%;
     margin: 0 auto;
@@ -248,6 +252,10 @@
   .modal-order-callback__form input[type="text"],
   .modal-order-callback__form input[type="tel"] {
     width: 100%;
+  }
+
+  .modal-order-callback__error-message {
+    left: 25px;
   }
 
   .modal-order-callback__form input[type="submit"] {
