--- a/source/sass/blocks/programms.scss
+++ b/source/sass/blocks/programms.scss
@@ -1,4 +1,5 @@
 .programms {
+  padding-bottom: 83px;
   padding-top: 105px;
   padding-left: 50px;
   padding-right: 50px;
@@ -6,7 +7,7 @@
   color: #000000;
   background-image: url("../../img/programms-sketch-desktop@1x.png");
   background-repeat: no-repeat;
-  background-position: right 43%;
+  background-position: right 26%;
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background-image: url("../../img/programms-sketch-desktop@2x.png");
@@ -273,9 +274,10 @@
     padding-top: 0;
     padding-left: 0;
     padding-right: 0;
+    padding-bottom: 30px;
     background-image: url("../../img/programms-sketch-mobile@1x.png");
     background-repeat: no-repeat;
-    background-position: 24px 36%;
+    background-position: 24px 33%;
     background-size: contain;
     overflow: hidden;
 
